--- a/Creating_the_steps/style.css
+++ b/Creating_the_steps/style.css
@@ -18,7 +18,7 @@ justify-content: center;
 margin: 0;
 height: 100vh;
 overflow: hidden;
-background-color: #f6f7fb;
+background-color: #ffffff;
 }
 
 .container{
@@ -37,13 +37,14 @@ text-align: center;
 
 .progress-container::before{
     content:'';
-    background-color :var(--line-border-empty);
-    position: absolute;
+    background-color:var(--line-border-empty);
+    
+     position: absolute;
     top:50%;
     left:0;
     transform: translateY(-50%);
     height:4px;
-    width:0%;
+    width:100%;
     z-index: -1;
     transition: .4s ease;
 }
@@ -79,7 +80,7 @@ text-align: center;
 
 .btn{
     background-color: var(--line-border-fill);
-    color: #fff;
+    color: #ffffff;
     border: 0;
     border-radius: 6px;
     cursor: pointer;
