--- a/Animated_navigation/style.css
+++ b/Animated_navigation/style.css
@@ -84,18 +84,18 @@ nav ul a {
 }
 
 .icon .line {
-  background-color: #ffffff;
-  height: 1px;
-  width: 40px;
+  background-color: #5290f9;
+  height: 2px;
+  width: 20px;
   position: absolute;
-  top: 20px;
-  left: 10px;
+  top: 10px;
+  left: 5px;
   transition: transform 0.6s linear;
 }
 
 .icon .line2 {
   top: auto;
-  bottom: 40px;
+  bottom: 10px;
   
 }
 
